# wan

./: .cspell.json  .dockerignore  .gitignore  .gitkeep_tests  .pre-commit-config.yaml  ALERTING_SETUP_SUMMARY.md  CAT_GENERATION_TEST_RESULTS.md  CLEANUP_SUMMARY.md  CODEBASE_ORGANIZATION_COMPLETE.md  CODEBASE_ORGANIZATION_SUCCESS.md  COMMIT_CONVENTIONS.md  COMPLETE_MODEL_FIX_SUMMARY.md  COMPREHENSIVE_TROUBLESHOOTING.md  DEPLOYMENT_GATES_FIX_SUMMARY.md  ENHANCED_TEST_CLI_SUMMARY.md  FINAL_FIX_SUMMARY.md  FINAL_INTEGRATION_COMPLETE.md  FINAL_TEST_ASSERTION_SUCCESS_REPORT.md  GENERATION_MONITORING_FIX_SUMMARY.md  GENERATION_SUCCESS_SUMMARY.md  HARDWARE_PROFILE_FIX_SUMMARY.md  IMPORT_PATH_FIXES_SUMMARY.md  MODEL_ISSUES_RESOLUTION_SUMMARY.md  NEXT_LOGICAL_STEPS_COMPLETE.md  PROXY_SETUP.md  QUICK_START.md  README.md  REPOSITORY_ORGANIZATION_COMPLETE.md  RTX4080_OPTIMIZATION_SUMMARY.md  SECURITY_IMPLEMENTATION_REPORT.md  STARTUP_MIGRATION.md  START_SERVERS.md  SYNTAX_ERROR_FIXING_PROGRESS_REPORT.md  SYSTEM_REQUIREMENTS.md  TASK_13_FALLBACK_RECOVERY_IMPLEMENTATION_SUMMARY.md  TASK_1_SERVICE_WORKER_FIX_SUMMARY.md  TASK_7_COMPLETION_SUMMARY.md  TASK_9_ENHANCED_ENDPOINTS_IMPLEMENTATION_SUMMARY.md  TASK_9_WAN_PIPELINE_INTEGRATION_SUMMARY.md  TEST_ASSERTION_FIXING_PROGRESS.md  (+121 more)
.github/: branch-protection-config.json  pull_request_template.md
.kiro/: team-config.json
archive/: 0.30.0  0.33.0  4.44.0  backend_config.json  config.json  recovery_config.json  rtx4080_memory_config.json  startup_config.json  startup_config_windows_safe.json
backend/: .env.example  Dockerfile  SECURITY.md  TASK_2_4_IMPLEMENTATION_SUMMARY.md  TASK_5_CORS_ENHANCEMENT_IMPLEMENTATION_SUMMARY.md  TASK_7_ENHANCED_ERROR_HANDLING_IMPLEMENTATION_SUMMARY.md  TASK_8_LORA_INTEGRATION_IMPLEMENTATION_SUMMARY.md  __main__.py  alembic.ini  app.py  config.json  config_backup_rtx4080.json  database.py  demo_cors_validation.py  diagnose_system.py  docker-compose.yml  final_system_check.py  fix_imports.py  fix_vram_validation.py  frontend_vram_config.json  hardware_profile_final.json  init_db.py  init_security_db.py  main.py  optimize_for_rtx4080.py  requirements.txt  start_full_stack.py  start_server.py  test_cuda_detection.py  test_enhanced_endpoints_simple.py  test_json_request.py  test_real_ai_ready.py  worker.py
cli/: README.md  __init__.py  main.py  wan_weight_cli.py
comprehensive_test_results/: test_session_1754791233_summary.txt
config/: .env.example  alerting-config.yaml  base.yaml  ci-health-config.yaml  default.yaml  dev.yaml  enhanced_model_config.json  models.toml  models_minimal.toml  models_original.toml  models_simple.toml  prod.yaml  production-health.yaml  quality-alerts.json  unified-config.yaml
config_recovery/: config_changes.json
config_templates/: deployment_config.json  test_config.json  test_env.txt
core/: __init__.py
coverage_reports/: coverage_summary_1754791064.txt
demo_benchmark_results/: benchmark_report.md
demo_examples/: README.md  demo_wan_deployment.py
demo_import_test/: profiles.json
demo_vram_configs/: profiles.json  vram_config.json
diagnostics/: final_system_status.json  validation_report.json
docs/: CHANGELOG.md  CLI_REFERENCE.md  CPU_MONITORING_FIX_STATUS.md  (+106 more)
(+3833 files in other folders)
